package art.lapov.apispringexam.entity;

public enum Role {
    OWNER,
    PARTICIPANT
}
